Countdown function copy (#7)
* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* Update from Shopify for theme Balancedecke-2022/Countdown_function_copy

Committed from shop: Balance Gewichtsdecke

* U

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -100,6 +100,7 @@
   {{ content_for_header }}
 
   {% if content_for_header contains 'rio.pwztag.com' %}{% render 'productwiz-rio', product: product, shop: shop, installGuard: true %}{% endif %}
+  {{ 'countdown.js' | asset_url | script_tag }}
 </head>
 
 <body
@@ -114,8 +115,8 @@
   {% comment %}  Theme modified to add our own SLIDE CART - I am not pulling the slide cart that comes as default with the theme - I did not want to comment all things to leave the theme cleaner, if we want to reuse the old slide cart we would have to check the original intact files for this theme - Yurith {% endcomment %}
 
   <div class="my-container" data-drawer-push>
-    <div class="MyCart_BodyWrapper">
-      <header id="headerHideShow" {% comment %}class="header-container"{% endcomment %}>
+    <div class="MyCart_BodyWrapper my-container__content">
+      <header id="headerHideShow" class="header-container">
         {% section 'utility-bar' %}
         {% section 'header' %}
       </header>
