--- a/sections/utility-bar.liquid
+++ b/sections/utility-bar.liquid
@@ -15,6 +15,12 @@
         "default": true
       },
       {
+        "type": "url",
+        "id": "link",
+        "label": "t:sections.utility_bar.blocks.announcement.settings.link.label",
+        "info": "t:sections.utility_bar.blocks.announcement.settings.link.info"
+      },
+      {
         "type": "header",
         "content": "t:sections.utility_bar.settings.social_media__header.content",
         "info": "t:sections.utility_bar.settings.social_media__header.info"
@@ -57,47 +63,16 @@
         "default": 5
       }
     ],
-    "max_blocks": 3,
+    "max_blocks": 4,
     "blocks": [
       {
         "type": "announcement",
         "name": "t:sections.utility_bar.blocks.announcement.name",
         "settings": [
           {
-            "type": "select",
-            "id": "simple_icons",
-            "label": "Simple Icons",
-            "options": [
-              {
-                "value": "none",
-                "label": "Select Icon"
-              },
-              {
-                "value": "test-winner",
-                "label": "Testsieger aller Therapiedecken"
-              },
-              {
-                "value": "days-test",
-                "label": "28 Tage Probeschlafen"
-              },
-              {
-                "value": "patent",
-                "label": "Patentierte & einzigartige Bezugstechnik "
-              }
-            ],
-            "default": "none"
-          },
-          {
-            "type": "text",
-            "id": "text",
-            "default": "Announce something here",
-            "label": "t:sections.utility_bar.blocks.announcement.settings.title.label"
-          },
-          {
-            "type": "url",
-            "id": "link",
-            "label": "t:sections.utility_bar.blocks.announcement.settings.link.label",
-            "info": "t:sections.utility_bar.blocks.announcement.settings.link.info"
+            "type": "html",
+            "id": "htmlcontent",
+            "label": "HTML text"
           }
         ]
       }
